; ModuleID = '/home/carl/AnghaBench/linux/net/dsa/extr_dsa2.c_dsa_tree_put.c'
source_filename = "/home/carl/AnghaBench/linux/net/dsa/extr_dsa2.c_dsa_tree_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dsa_switch_tree = type { i32 }

@dsa_tree_release = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.dsa_switch_tree*)* @dsa_tree_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dsa_tree_put(%struct.dsa_switch_tree* %0) #0 {
  %2 = alloca %struct.dsa_switch_tree*, align 8
  store %struct.dsa_switch_tree* %0, %struct.dsa_switch_tree** %2, align 8
  %3 = load %struct.dsa_switch_tree*, %struct.dsa_switch_tree** %2, align 8
  %4 = icmp ne %struct.dsa_switch_tree* %3, null
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = load %struct.dsa_switch_tree*, %struct.dsa_switch_tree** %2, align 8
  %7 = getelementptr inbounds %struct.dsa_switch_tree, %struct.dsa_switch_tree* %6, i32 0, i32 0
  %8 = load i32, i32* @dsa_tree_release, align 4
  %9 = call i32 @kref_put(i32* %7, i32 %8)
  br label %10

10:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @kref_put(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
